--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -82,6 +82,7 @@ body {
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .-div-text {
